# tax_estimater

./: .gitignore  .mdl_ruleset.rb  .pre-commit-config.yaml  Cargo.toml  LICENSE  README.md  pyproject.toml
data/: example_input.json  federal_tax_bracket.json
estimate-client/: Cargo.toml  README.md
estimate-client/src/: cli.rs  client.rs  errors.rs  main.rs
estimate-common/: Cargo.toml
estimate-common/src/: common.rs  errors.rs
estimate-server/: Cargo.toml  README.md
estimate-server/src/: lib.rs  server.rs  tax_bracket.rs
