[package]
name = "estimate-server"
version = "0.1.0"
edition = "2021"

[dependencies]
estimate-common = {path = "../estimate-common"}
serde = "1.0.152"
serde_json = "1.0.91"
serde_valid = "0.11.3"

[lib]
name = "estimate_server"
path = "src/lib.rs"

[[bin]]
name = "estimate_server_cli"
path = "src/bin/server_bin.rs"
